<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/Heading"
        android:text="@string/txt_measurement" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_width"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/seekbar_measure_width"
            style="@style/DiscreteSeekBar"
            app:dsb_max="500"
            app:dsb_min="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_height"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/seekbar_measure_height"
            style="@style/DiscreteSeekBar"
            app:dsb_max="500"
            app:dsb_min="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_rotation"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/seekbar_measure_roataion"
            style="@style/DiscreteSeekBar"
            app:dsb_max="360"
            app:dsb_min="0"
            app:dsb_value="90" />

    </LinearLayout>

</LinearLayout>